# orbisdeck

./: .eslintrc.cjs  .gitignore  CHANGELOG.md  IDEA.md  README.md  README.ru.md  ROADMAP.md  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
docs/superpowers/specs/: 2026-06-26-global-claude-context-map-design.md
resources/: icon.icns
scripts/: e2e-m3.mjs  e2e-m4.mjs  e2e-m5.mjs  e2e.mjs  fix-native.mjs
src-tauri/: Cargo.toml  SPIKE.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agents.rs  claude.rs  detect.rs  docker.rs  files.rs  git.rs  lib.rs  main.rs  search.rs  store.rs  types.rs
src/main/: agent-hooks.ts  agents.ts  claude.ts  detect.ts  docker.ts  files.ts  git.ts  index.ts  ipc.ts  store.ts  terminals.ts
src/preload/: index.ts
src/renderer/: App.tsx  index.html  main.tsx  styles.css  tauri-bridge.ts
src/renderer/components/: AddProjectModal.tsx  AgentsPanel.tsx  AppSettingsModal.tsx  BottomPanel.tsx  ClaudeContext.tsx  ClaudeContextGraph.tsx  ClaudeElements.tsx  ClaudePanel.tsx  ClaudeSettingsForm.tsx  CommandPalette.tsx  DiffViewer.tsx  DockerPanel.tsx  FileTree.tsx  FileViewer.tsx  GitPanel.tsx  GlobalClaudeModal.tsx  JsonTree.tsx  LogsModal.tsx  MissionControl.tsx  NotesPanel.tsx  PermissionsEditor.tsx  ProjectTabs.tsx  RightPanel.tsx  SearchModal.tsx  SettingsPanel.tsx  Splitter.tsx  TerminalPanel.tsx  TerminalView.tsx
src/renderer/i18n/: index.tsx  messages.ts
src/shared/: ipc-contract.ts  types.ts
(+7 files in other folders)
