[package]
name = "orbisdeck"
version = "0.1.0"
edition = "2021"
description = "OrbisDeck (Tauri spike)"

[lib]
name = "orbisdeck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
