[package]
name = "orbisdeck"
version = "0.1.0"
edition = "2021"
description = "OrbisDeck — project command center (Tauri)"

[lib]
name = "orbisdeck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
notify = "6"
rfd = "0.14"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
